--- a/css/application.css
+++ b/css/application.css
@@ -1,4 +1,14 @@
-body {
-  width: 500px;
+@import url("reset.css");
+@import url("nav_bar.css");
 
+main#root {
+  width: 350px;
+  margin: 2px;
+  border: 1px solid #4F4F4F;
+}
+
+.clearfix:after {
+  content: "";
+  display: table;
+  clear: both;
 }
