--- a/css/nav_bar.css
+++ b/css/nav_bar.css
@@ -2,6 +2,7 @@
   display: flex;
   background-color: #8F8F8F;
   border: 1px outset #505051;
+  border-radius: 4px;
 }
 
 .nav-item {
@@ -12,7 +13,7 @@ button {
   background-color: #8F8F8F;
   background: linear-gradient(to #8F8F8F , #505051);
   border-radius: 4px;
-  padding: 0 5px;
+  padding: 5px 8px 0 8px;
 }
 
 button:hover {
