added settings input field

--- a/css/application.scss
+++ b/css/application.scss
@@ -1,5 +1,6 @@
-// @import "reset";
-@import "nav_bar";
+@import "reset.scss";
+@import "nav_bar.scss";
+@import "settings.scss";
 
 main#root {
   width: 350px;
