updated default nav bar setting

--- a/css/nav_bar.scss
+++ b/css/nav_bar.scss
@@ -1,8 +1,12 @@
 .nav-bar {
+  top: 0;
   display: flex;
+  position: fixed;
+  width: 100%;
   background-color: #8F8F8F;
   border: 1px outset #505051;
   border-radius: 4px;
+  height: 40px;
 }
 
 
