added range input for ownership percentage

--- a/css/settings.scss
+++ b/css/settings.scss
@@ -16,3 +16,12 @@
   width: 30px;
   text-align: center;
 }
+
+div.slider-container{
+  // text-align: center;
+}
+
+input.ownership-slider {
+  width: 80%;
+  margin-top: 10px;
+}
